--- a/index.html
+++ b/index.html
@@ -194,6 +194,7 @@ function main() {
 
 <script>
 var ex = [
+//{ file:'spline_arrow.jscad', title: 'Spline arrows' },
 { file:'spline.jscad', title: 'Spline' },
 { file:'logo.jscad', title: 'OpenJSCAD.org Logo' },
 { file:'logo.amf', title: 'OpenJSCAD.org Logo', type: 'AMF', new: true },
